# IZ_2_18

./: .travis.yml  CMakeLists.txt
src/: main.cpp
src/include/neq_max_seq/: lib.h
src/neq_max_seq/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  main.cpp
